added position amendment api endpoint
