# docs/openapi-3.1.0.yml
@@ -283,10 +283,10 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/PositionData"
+        "400":
+          description: Bad Request
         "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
+          description: Unauthorized
   /position/liquidate:
     post:
       description: |
@@ -301,10 +301,44 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Bad Request
         "401":
-          description: "Unauthorized"
-        "403":
-          description: "Forbidden"
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "422":
+          description: Unprocessable Content
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ValidationErrorResponse"
+  /position/amend:
+    post:
+      description: |
+        Amend an open position on the system.
+      tags:
+        - Position
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PositionAmendmentRequest"
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "422":
+          description: Unprocessable Content
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ValidationErrorResponse"
   /user/create:
     post:
       description: |
@@ -608,6 +642,8 @@ components:
           type: string
         symbol2BaseQty:
           type: string
+        lastPnl:
+          type: string
         regressionSlope:
           type: string
         takeProfit:
@@ -626,6 +662,20 @@ components:
         symbol2:
           type: string
           example: ETHUSDT
+    PositionAmendmentRequest:
+      type: object
+      required: [symbol1, symbol2]
+      properties:
+        symbol1:
+          type: string
+          example: BTCUSDT
+        symbol2:
+          type: string
+          example: ETHUSDT
+        takeProfit:
+          type: string
+        stopLoss:
+          type: string
     UserCreationRequest:
       type: object
       required: [email, rank]
